@@ -4310,9 +4310,9 @@ public:
         LOG(LOG_DOSMISC,LOG_DEBUG)("DOS kernel structures will be allocated from pool 0x%04x-0x%04x",
                 DOS_PRIVATE_SEGMENT,DOS_PRIVATE_SEGMENT_END-1);
 
-        DOS_IHSEG = DOS_GetMemory(1,"DOS_IHSEG");
+	DOS_IHSEG = DOS_GetMemory(1,"DOS_IHSEG");
 
-        /* DOS_INFOBLOCK_SEG contains the entire List of Lists, though the INT 21h call returns seg:offset with offset nonzero */
+	/* DOS_INFOBLOCK_SEG contains the entire List of Lists, though the INT 21h call returns seg:offset with offset nonzero */
 	/* NTS: DOS_GetMemory() allocation sizes are in PARAGRAPHS (16-byte units) not bytes */
 	/* NTS: DOS_INFOBLOCK_SEG must be 0x20 paragraphs, CONDRV_SEG 0x08 paragraphs, and CONSTRING_SEG 0x0A paragraphs.
 	 *      The total combined size of INFOBLOCK+CONDRV+CONSTRING must be 0x32 paragraphs.
@@ -4325,16 +4325,20 @@ public:
 	 *      See also:
 	 *
 	 *      [https://www.os2museum.com/wp/how-to-void-your-valuable-warranty/]
-         *      [https://www.os2museum.com/files/drdos_detect.txt]
-         *      [https://www.os2museum.com/wp/about-that-warranty/]
-         *      [https://github.com/joncampbell123/dosbox-x/issues/3626]
+	 *      [https://www.os2museum.com/files/drdos_detect.txt]
+	 *      [https://www.os2museum.com/wp/about-that-warranty/]
+	 *      [https://github.com/joncampbell123/dosbox-x/issues/3626]
 	 */
-        DOS_INFOBLOCK_SEG = DOS_GetMemory(0x20,"DOS_INFOBLOCK_SEG");	// was 0x80
-        DOS_CONDRV_SEG = DOS_GetMemory(0x08,"DOS_CONDRV_SEG");		// was 0xA0
-        DOS_CONSTRING_SEG = DOS_GetMemory(0x0A,"DOS_CONSTRING_SEG");	// was 0xA8
-        DOS_SDA_SEG = DOS_GetMemory(DOS_SDA_SEG_SIZE>>4,"DOS_SDA_SEG");		// was 0xB2  (0xB2 + 0x56 = 0x108)
-        DOS_SDA_OFS = 0;
-        DOS_CDS_SEG = DOS_GetMemory(0x10,"DOS_CDA_SEG");		// was 0x108
+
+	// FIXME: 0x32 paragraphs (0x320 bytes) might not be enough for the second half of the SFT table placed at segment +0x26:0!
+	DOS_INFOBLOCK_SEG = DOS_GetMemory(0x32,"DOS_INFOBLOCK_SEG");		// was 0x80  0x32 = 0x20(INFOBLOCK) + 0x08(old CONDRV_SEG) + 0x0A(CONSTRING_SEG)
+	DOS_CONSTRING_SEG = DOS_INFOBLOCK_SEG + 0x28;				// was 0xA8
+	DOS_SDA_SEG = DOS_GetMemory(DOS_SDA_SEG_SIZE>>4,"DOS_SDA_SEG");		// was 0xB2  (0xB2 + 0x56 = 0x108)
+	DOS_SDA_OFS = 0;
+
+	/* 2024/06/02: Keep the CON driver away from the clusterfuck of the INFOBLOCK and SFT mess */
+	DOS_CONDRV_SEG = DOS_GetMemory(0x04,"DOS_CONDRV_SEG");		// was 0xA0
+	DOS_CDS_SEG = DOS_GetMemory(0x10,"DOS_CDA_SEG");		// was 0x108
 
 		LOG(LOG_DOSMISC,LOG_DEBUG)("DOS kernel alloc:");
 		LOG(LOG_DOSMISC,LOG_DEBUG)("   IHSEG:        seg 0x%04x",DOS_IHSEG);
